add more entry to blog with former entry name

--- a/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-13-released.adoc
+++ b/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-13-released.adoc
@@ -17,9 +17,9 @@
 //     under the License.
 //
 
-= [ANNOUNCE] Apache NetBeans 17 Released
+= [ANNOUNCE] Apache NetBeans 13 Released
 Geertjan Wielenga
-2023-02-21
+2022-03-04
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
@@ -30,26 +30,27 @@ Geertjan Wielenga
 :syntax: true
 
 
-The Apache NetBeans team is pleased to announce that Apache NetBeans 17 was released on February 21, 2023.
+The Apache NetBeans team is pleased to announce that Apache NetBeans 13 is released today on March 4, 2022. Apache NetBeans is a full IDE for Java SE, Java EE, PHP, JavaScript, HTML5 and more, including some support for Groovy and C/C++.
 
-What's in the Apache NetBeans 17 release:
+Our schedule is publicly available here:
 
-https://github.com/apache/netbeans/releases/tag/17
+https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule
 
-With thanks to 36 contributors, including 7 who have contributed for the first time. Thank you!
+New & noteworthy features of the 13 release:
+
+xref:../download/nb13/index.adoc[Apache NetBeans 13 Features page]
 
 Downloads:
 
-https://netbeans.apache.org/download/nb17/
-
-See our release schedule:
-
-https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule
+xref:../download/nb13/nb13.adoc[Apache NetBeans 13 Download page]
 
 Feel free to share the good news!
 
 Thanks everyone, and best wishes,
 
-Neil, Eric, Martin, Geertjan
+Neil, Eric, and Geertjan
+
+Release Manager for Apache NetBeans 13
 
 on behalf of Apache NetBeans PMC
+
