--- a/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-14-released.adoc
+++ b/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-14-released.adoc
@@ -17,30 +17,30 @@
 //     under the License.
 //
 
-= [ANNOUNCE] Apache NetBeans 18 Released
+= [ANNOUNCE] Apache NetBeans 14 Released
 Geertjan Wielenga
-2023-06-01
+2022-06-17
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
-:keywords: Apache NetBeans 18 release
-:description: Apache NetBeans 18 release
+:keywords: Apache NetBeans blog index
+:description: Apache NetBeans blog index
 :toc: left
 :toc-title:
 :syntax: true
 
 
-The Apache NetBeans team is pleased to announce that Apache NetBeans 18 was released on May 30, 2023.
+The Apache NetBeans team is pleased to announce that Apache NetBeans 14 was released on June 9, 2022 (though there's been a delay in announcing the release).
 
-What's in the Apache NetBeans 18 release:
+What's in the Apache NetBeans 14 release:
 
-https://github.com/apache/netbeans/releases/tag/18
+https://github.com/apache/netbeans/releases/tag/14
 
-With thanks to 31 contributors, including 5 who have contributed for the first time. Thank you!
+Note it's the first time we're doing a generated changelog like the above, next time it will be even better, we'll work on generating different sections and highlights, to make it easier to read through.
 
 Downloads:
 
-https://netbeans.apache.org/download/nb18/
+xref:../download/nb14/index.adoc[Apache NetBeans 14 Download page]
 
 See our release schedule:
 
@@ -50,6 +50,7 @@ Feel free to share the good news!
 
 Thanks everyone, and best wishes,
 
-Neil, Eric, Martin, Geertjan
+Neil, Eric, Geertjan
 
 on behalf of Apache NetBeans PMC
+
