more blog entry for 2021

--- a/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-12-3.adoc
+++ b/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-12-3.adoc
@@ -17,25 +17,31 @@
 //     under the License.
 //
 
-= NetBeans Pub Hangout in Prague
+= [ANNOUNCE] Apache NetBeans 12.3 Released
 :author: Geertjan Wielenga
-:revdate: 2022-10-24
+:revdate: 2021-03-11
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
-:keywords: Apache NetBeans 18 release
-:description: Apache NetBeans 18 release
+:keywords: Apache NetBeans blog index
+:description: Apache NetBeans blog index
 :toc: left
 :toc-title:
 :syntax: true
 
 
-A group of Java engineers gathered in a pub in Prague last night to celebrate many years 
-of their engagement in NetBeans, all having worked in Sun Microsystems or Oracle or both, 
-continuing into the Apache world where NetBeans is now found.
+The Apache NetBeans team is pleased to announce that Apache NetBeans 12.3 was released on March 3rd 2021. Apache NetBeans is a full IDE for Java SE, Java EE, PHP, JavaScript, HTML5 and more, including some support for Groovy and C/C++.
 
-This will not be the last of such gatherings, anyone involved in NetBeans over
-the years is more than welcome to attend or set up similar get togethers, 
-ideally in a pub, which is also where NetBeans started.
+Apache NetBeans 12.3 is the first quarterly feature update in 2021. The LTS release of the current cycle is Apache NetBeans 12.0. The 12.3 release has not been as heavily tested as the LTS release. Our schedule is publicly available here:
 
-image::netbeans-pub-hangout-in-prague-pic1.png[]
+https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule
+
+New & noteworthy features of the 12.3 release:
+
+xref:../download/nb123/index.adoc[Apache NetBeans 12.3 Features page]
+
+Downloads:
+
+xref:../download/nb123/nb123.adoc[Apache NetBeans 12.3 Download page]
+
+Feel free to share the good news!
