--- a/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-12-4.adoc
+++ b/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-12-4.adoc
@@ -17,9 +17,9 @@
 //     under the License.
 //
 
-= [ANNOUNCE] Apache NetBeans 17 Released
+= [ANNOUNCE] Apache NetBeans 12.4 Released
 :author: Geertjan Wielenga
-:revdate: 2023-02-21
+:revdate: 2021-05-29
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
@@ -30,26 +30,26 @@
 :syntax: true
 
 
-The Apache NetBeans team is pleased to announce that Apache NetBeans 17 was released on February 21, 2023.
+The Apache NetBeans team is pleased to announce that Apache NetBeans 12.4 was released on May 19th 2021 footnote:[We're a little late in announcing this because we were creating convenience binaries, e.g., installers, since announcing the result of the vote thread.]. Apache NetBeans is a full IDE for Java SE, Java EE, PHP, JavaScript, HTML5 and more, including some support for Groovy and C/C++.
 
-What's in the Apache NetBeans 17 release:
+Apache NetBeans 12.4 is a quarterly feature update. The LTS release of the current cycle is Apache NetBeans 12.0. The 12.4 release has not been as heavily tested as the LTS release. Our schedule is publicly available here:
 
-https://github.com/apache/netbeans/releases/tag/17
+https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule
 
-With thanks to 36 contributors, including 7 who have contributed for the first time. Thank you!
+New & noteworthy features of the 12.4 release:
+
+xref:../download/nb124/index.adoc[Apache NetBeans 12.4 Features page]
 
 Downloads:
 
-xref:../download/nb17/index.adoc[Apache NetBeans 17 Download page]
-
-See our release schedule:
-
-https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule
+xref:../download/nb124/nb124.adoc[Apache NetBeans 12.4 Download page]
 
 Feel free to share the good news!
 
 Thanks everyone, and best wishes,
 
-Neil, Eric, Martin, Geertjan
+Geertjan and Neil
+
+Release Managers for Apache NetBeans 12.4
 
 on behalf of Apache NetBeans PMC
