--- a/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-12-5.adoc
+++ b/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-12-5.adoc
@@ -17,9 +17,9 @@
 //     under the License.
 //
 
-= [ANNOUNCE] Apache NetBeans 17 Released
+= [ANNOUNCE] Apache NetBeans 12.5 Released
 :author: Geertjan Wielenga
-:revdate: 2023-02-21
+:revdate: 2021-09-21
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
@@ -30,26 +30,27 @@
 :syntax: true
 
 
-The Apache NetBeans team is pleased to announce that Apache NetBeans 17 was released on February 21, 2023.
+The Apache NetBeans team is pleased to announce that Apache NetBeans 12.5 was released on September 13th 2021 footnote:[We're again a little late in announcing this because we were creating convenience binaries, e.g., installers, since announcing the result of the vote thread.]. Apache NetBeans is a full IDE for Java SE, Java EE, PHP, JavaScript, HTML5 and more, including some support for Groovy and C/C++.
 
-What's in the Apache NetBeans 17 release:
-
-https://github.com/apache/netbeans/releases/tag/17
-
-With thanks to 36 contributors, including 7 who have contributed for the first time. Thank you!
-
-Downloads:
-
-xref:../download/nb17/index.adoc[Apache NetBeans 17 Download page]
-
-See our release schedule:
+Apache NetBeans 12.5 is a quarterly feature update. The LTS release of the current cycle is Apache NetBeans 12.0. The 12.5 release has not been as heavily tested as the LTS release. Our schedule is publicly available here:
 
 https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule
 
+New & noteworthy features of the 12.5 release:
+
+xref:../download/nb125/index.adoc[Apache NetBeans 12.5 Features page]
+
+Downloads:
+
+xref:../download/nb125/nb125.adoc[Apache NetBeans 12.5 Download page]
+
 Feel free to share the good news!
+
 
 Thanks everyone, and best wishes,
 
-Neil, Eric, Martin, Geertjan
+Eric
+
+Release Manager for Apache NetBeans 12.5
 
 on behalf of Apache NetBeans PMC
