--- a/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-13-released.adoc
+++ b/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-13-released.adoc
@@ -18,8 +18,8 @@
 //
 
 = [ANNOUNCE] Apache NetBeans 13 Released
-Geertjan Wielenga
-2022-03-04
+:author: Geertjan Wielenga
+:revdate: 2022-03-04
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
