--- a/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-15-released.adoc
+++ b/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-15-released.adoc
@@ -18,8 +18,8 @@
 //
 
 = [ANNOUNCE] Apache NetBeans 15 Released
-Geertjan Wielenga
-2022-09-07
+:author: Geertjan Wielenga
+:revdate: 2022-09-07
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
