--- a/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-16-released.adoc
+++ b/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-16-released.adoc
@@ -18,8 +18,8 @@
 //
 
 = [ANNOUNCE] Apache NetBeans 16 Released
-Geertjan Wielenga
-2022-12-15
+:author: Geertjan Wielenga
+:revdate: 2022-12-15
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
