--- a/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-18-released.adoc
+++ b/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-18-released.adoc
@@ -18,8 +18,8 @@
 //
 
 = [ANNOUNCE] Apache NetBeans 18 Released
-Geertjan Wielenga
-2023-06-01
+:author: Geertjan Wielenga
+:revdate: 2023-06-01
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
