--- a/netbeans.apache.org/src/content/blogs/log4j-and-apache-netbeans.adoc
+++ b/netbeans.apache.org/src/content/blogs/log4j-and-apache-netbeans.adoc
@@ -18,8 +18,8 @@
 //
 
 = Log4j and Apache NetBeans
-Geertjan Wielenga
-2022-01-04
+:author: Geertjan Wielenga
+:revdate: 2022-01-04
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
