--- a/netbeans.apache.org/src/content/blogs/towards-fair-trade-for-foss.adoc
+++ b/netbeans.apache.org/src/content/blogs/towards-fair-trade-for-foss.adoc
@@ -18,8 +18,8 @@
 //
 
 = Towards Fair Trade for FOSS
-Geertjan Wielenga
-2022-12-03
+:author: Geertjan Wielenga
+:revdate: 2022-12-03
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
