--- a/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-12-6.adoc
+++ b/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-12-6.adoc
@@ -17,25 +17,40 @@
 //     under the License.
 //
 
-= NetBeans Pub Hangout in Prague
+= [ANNOUNCE] Apache NetBeans 12.6 Released
 :author: Geertjan Wielenga
-:revdate: 2022-10-24
+:revdate: 2021-12-06
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
-:keywords: Apache NetBeans 18 release
-:description: Apache NetBeans 18 release
+:keywords: Apache NetBeans blog index
+:description: Apache NetBeans blog index
 :toc: left
 :toc-title:
 :syntax: true
 
 
-A group of Java engineers gathered in a pub in Prague last night to celebrate many years 
-of their engagement in NetBeans, all having worked in Sun Microsystems or Oracle or both, 
-continuing into the Apache world where NetBeans is now found.
+The Apache NetBeans team is pleased to announce that Apache NetBeans 12.6 was released on November 29th 2021. Apache NetBeans is a full IDE for Java SE, Java EE, PHP, JavaScript, HTML5 and more, including some support for Groovy and C/C++.
 
-This will not be the last of such gatherings, anyone involved in NetBeans over
-the years is more than welcome to attend or set up similar get togethers, 
-ideally in a pub, which is also where NetBeans started.
+Our schedule is publicly available here:
 
-image::netbeans-pub-hangout-in-prague-pic1.png[]
+https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule
+
+New & noteworthy features of the 12.6 release:
+
+xref:../download/nb126/index.adoc[Apache NetBeans 12.6 Features page]
+
+Downloads:
+
+xref:../download/nb126/nb126.adoc[Apache NetBeans 12.6 Download page]
+
+Feel free to share the good news!
+
+Thanks everyone, and best wishes,
+
+Neil and Geertjan
+
+Release Manager for Apache NetBeans 12.6
+
+on behalf of Apache NetBeans PMC
+
