--- a/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-14-released.adoc
+++ b/netbeans.apache.org/src/content/blogs/announce-apache-netbeans-14-released.adoc
@@ -18,8 +18,8 @@
 //
 
 = [ANNOUNCE] Apache NetBeans 14 Released
-Geertjan Wielenga
-2022-06-17
+:author: Geertjan Wielenga
+:revdate: 2022-06-17
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
