--- a/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-12-3.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-12-3.adoc
@@ -38,10 +38,10 @@ https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule
 
 New & noteworthy features of the 12.3 release:
 
-xref:../download/nb123/index.adoc[Apache NetBeans 12.3 Features page]
+xref:../../download/nb123/index.adoc[Apache NetBeans 12.3 Features page]
 
 Downloads:
 
-xref:../download/nb123/nb123.adoc[Apache NetBeans 12.3 Download page]
+xref:../../download/nb123/nb123.adoc[Apache NetBeans 12.3 Download page]
 
 Feel free to share the good news!
