--- a/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-12-5.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-12-5.adoc
@@ -38,11 +38,11 @@ https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule
 
 New & noteworthy features of the 12.5 release:
 
-xref:../download/nb125/index.adoc[Apache NetBeans 12.5 Features page]
+xref:../../download/nb125/index.adoc[Apache NetBeans 12.5 Features page]
 
 Downloads:
 
-xref:../download/nb125/nb125.adoc[Apache NetBeans 12.5 Download page]
+xref:../../download/nb125/nb125.adoc[Apache NetBeans 12.5 Download page]
 
 Feel free to share the good news!
 
