--- a/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-12-6.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-12-6.adoc
@@ -38,11 +38,11 @@ https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule
 
 New & noteworthy features of the 12.6 release:
 
-xref:../download/nb126/index.adoc[Apache NetBeans 12.6 Features page]
+xref:../../download/nb126/index.adoc[Apache NetBeans 12.6 Features page]
 
 Downloads:
 
-xref:../download/nb126/nb126.adoc[Apache NetBeans 12.6 Download page]
+xref:../../download/nb126/nb126.adoc[Apache NetBeans 12.6 Download page]
 
 Feel free to share the good news!
 
