--- a/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-14-released.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-14-released.adoc
@@ -40,7 +40,7 @@ Note it's the first time we're doing a generated changelog like the above, next 
 
 Downloads:
 
-xref:../download/nb14/index.adoc[Apache NetBeans 14 Download page]
+xref:../../download/nb14/index.adoc[Apache NetBeans 14 Download page]
 
 See our release schedule:
 
