--- a/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-15-released.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-15-released.adoc
@@ -40,7 +40,7 @@ With thanks to 33 contributors, including some who have contributed for the firs
 
 Downloads:
 
-xref:../download/nb15/index.adoc[Apache NetBeans 15 Download page]
+xref:../../download/nb15/index.adoc[Apache NetBeans 15 Download page]
 
 See our release schedule:
 
