--- a/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-16-released.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-16-released.adoc
@@ -40,7 +40,7 @@ With thanks to 26 contributors, including some who have contributed for the firs
 
 Downloads:
 
-xref:../download/nb16/index.adoc[Apache NetBeans 16 Download page]
+xref:../../download/nb16/index.adoc[Apache NetBeans 16 Download page]
 
 See our release schedule:
 
