--- a/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-17-released.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-17-released.adoc
@@ -40,7 +40,7 @@ With thanks to 36 contributors, including 7 who have contributed for the first t
 
 Downloads:
 
-xref:../download/nb17/index.adoc[Apache NetBeans 17 Download page]
+xref:../../download/nb17/index.adoc[Apache NetBeans 17 Download page]
 
 See our release schedule:
 
