--- a/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-18-released.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-18-released.adoc
@@ -40,7 +40,7 @@ With thanks to 31 contributors, including 5 who have contributed for the first t
 
 Downloads:
 
-xref:../download/nb18/index.adoc[Apache NetBeans 18 Download page]
+xref:../../download/nb18/index.adoc[Apache NetBeans 18 Download page]
 
 See our release schedule:
 
