--- a/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-11-3.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-11-3.adoc
@@ -17,9 +17,9 @@
 //     under the License.
 //
 
-= [ANNOUNCE] Apache NetBeans 13 Released
+= [ANNOUNCE] Apache NetBeans 11.3 Released
 :author: Geertjan Wielenga
-:revdate: 2022-03-04
+:revdate: 2020-03-04
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
@@ -30,27 +30,20 @@
 :syntax: true
 
 
-The Apache NetBeans team is pleased to announce that Apache NetBeans 13 is released today on March 4, 2022. Apache NetBeans is a full IDE for Java SE, Java EE, PHP, JavaScript, HTML5 and more, including some support for Groovy and C/C++.
+The Apache NetBeans team is pleased to announce the release of Apache NetBeans 11.3. 
+Apache NetBeans is a full IDE for Java SE, Java EE, PHP and JavaScript development with some Groovy language support.
 
-Our schedule is publicly available here:
+Apache NetBeans 11.3 is the third Apache NetBeans release outside the Apache Incubator and the third release of the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[new quarterly release cycle]. 
+The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. 
+The 11.3 release has not been as heavily tested as the LTS release. 
+Use 11.3 to access the latest features and to provide feedback for the next LTS release, scheduled for April 2020.
 
-https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule
+New & noteworthy features of the 11.3 release:
 
-New & noteworthy features of the 13 release:
-
-xref:../../download/nb13/index.adoc[Apache NetBeans 13 Features page]
+xref:../../download/nb113/index.adoc[Apache NetBeans 11.3 Features page]
 
 Downloads:
 
-xref:../../download/nb13/nb13.adoc[Apache NetBeans 13 Download page]
+xref:../../download/nb113/nb113.adoc[Apache NetBeans 11.3 Download page]
 
 Feel free to share the good news!
-
-Thanks everyone, and best wishes,
-
-Neil, Eric, and Geertjan
-
-Release Manager for Apache NetBeans 13
-
-on behalf of Apache NetBeans PMC
-
