--- a/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-12-1.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-12-1.adoc
@@ -17,9 +17,9 @@
 //     under the License.
 //
 
-= [ANNOUNCE] Apache NetBeans 13 Released
+= [ANNOUNCE] Apache NetBeans 12.1 Released
 :author: Geertjan Wielenga
-:revdate: 2022-03-04
+:revdate: 2020-09-15
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
@@ -30,27 +30,20 @@
 :syntax: true
 
 
-The Apache NetBeans team is pleased to announce that Apache NetBeans 13 is released today on March 4, 2022. Apache NetBeans is a full IDE for Java SE, Java EE, PHP, JavaScript, HTML5 and more, including some support for Groovy and C/C++.
+The Apache NetBeans team is pleased to announce that Apache NetBeans 12.1 was released on Sept 1st 2020. 
+Apache NetBeans is a full IDE for Java SE, Java EE, PHP, JavaScript, HTML5 and more, including some support for Groovy and (new) C/C++.
 
-Our schedule is publicly available here:
+Apache NetBeans 12.1 is the first quarterly feature update in the NetBeans 12 cycle. 
+The LTS release of the current cycle is Apache NetBeans 12.0. The 12.1 release has not been as heavily tested as the LTS release. 
+Use 12.1 to access the latest features and to provide feedback for the next LTS release, scheduled for mid-2021.
 
-https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule
 
-New & noteworthy features of the 13 release:
+New & noteworthy features of the 12.1 release:
 
-xref:../../download/nb13/index.adoc[Apache NetBeans 13 Features page]
+xref:../../download/nb121/index.adoc[Apache NetBeans 12.1 Features page]
 
 Downloads:
 
-xref:../../download/nb13/nb13.adoc[Apache NetBeans 13 Download page]
+xref:../../download/nb121/nb121.adoc[Apache NetBeans 12.1 Download page]
 
 Feel free to share the good news!
-
-Thanks everyone, and best wishes,
-
-Neil, Eric, and Geertjan
-
-Release Manager for Apache NetBeans 13
-
-on behalf of Apache NetBeans PMC
-
