--- a/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-12-4.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-12-4.adoc
@@ -38,11 +38,11 @@ https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule
 
 New & noteworthy features of the 12.4 release:
 
-xref:../download/nb124/index.adoc[Apache NetBeans 12.4 Features page]
+xref:../../download/nb124/index.adoc[Apache NetBeans 12.4 Features page]
 
 Downloads:
 
-xref:../download/nb124/nb124.adoc[Apache NetBeans 12.4 Download page]
+xref:../../download/nb124/nb124.adoc[Apache NetBeans 12.4 Download page]
 
 Feel free to share the good news!
 
