--- a/netbeans.apache.org/src/content/blogs/entry/apache-netbeans-11-3-beta2.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/apache-netbeans-11-3-beta2.adoc
@@ -17,9 +17,9 @@
 //     under the License.
 //
 
-= [ANNOUNCE] Apache NetBeans 13 Released
-:author: Geertjan Wielenga
-:revdate: 2022-03-04
+= Apache NetBeans 11.3-beta2 is Ready for Testing!
+:author: lkishalmi 
+:revdate: 2020-02-03
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
@@ -30,27 +30,11 @@
 :syntax: true
 
 
-The Apache NetBeans team is pleased to announce that Apache NetBeans 13 is released today on March 4, 2022. Apache NetBeans is a full IDE for Java SE, Java EE, PHP, JavaScript, HTML5 and more, including some support for Groovy and C/C++.
+Eric Barboni, our Release Manager of 11.3, produced Apache NetBeans 11.3-beta2 build the other day. It is available for testing!
 
-Our schedule is publicly available here:
+Those using the Snap distribution and would like to give it a try:
 
-https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule
-
-New & noteworthy features of the 13 release:
-
-xref:../../download/nb13/index.adoc[Apache NetBeans 13 Features page]
-
-Downloads:
-
-xref:../../download/nb13/nb13.adoc[Apache NetBeans 13 Download page]
-
-Feel free to share the good news!
-
-Thanks everyone, and best wishes,
-
-Neil, Eric, and Geertjan
-
-Release Manager for Apache NetBeans 13
-
-on behalf of Apache NetBeans PMC
-
+[source,console]
+----
+sudo snap refresh --channel=edge netbeans
+----
