--- a/netbeans.apache.org/src/content/blogs/entry/when-will-apache-netbeans-12.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/when-will-apache-netbeans-12.adoc
@@ -17,9 +17,9 @@
 //     under the License.
 //
 
-= [ANNOUNCE] Apache NetBeans 13 Released
+= When will Apache NetBeans 12.0 be released?
 :author: Geertjan Wielenga
-:revdate: 2022-03-04
+:revdate: 2020-03-11
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
@@ -30,27 +30,8 @@
 :syntax: true
 
 
-The Apache NetBeans team is pleased to announce that Apache NetBeans 13 is released today on March 4, 2022. Apache NetBeans is a full IDE for Java SE, Java EE, PHP, JavaScript, HTML5 and more, including some support for Groovy and C/C++.
+Apache NetBeans 12.0 will be released once many people:
 
-Our schedule is publicly available here:
-
-https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule
-
-New & noteworthy features of the 13 release:
-
-xref:../../download/nb13/index.adoc[Apache NetBeans 13 Features page]
-
-Downloads:
-
-xref:../../download/nb13/nb13.adoc[Apache NetBeans 13 Download page]
-
-Feel free to share the good news!
-
-Thanks everyone, and best wishes,
-
-Neil, Eric, and Geertjan
-
-Release Manager for Apache NetBeans 13
-
-on behalf of Apache NetBeans PMC
-
+. Download Apache NetBeans 12.0 Beta 4: removed
+. Try it out. Here is an overview of the newest features, though incomplete: removed
+. Fill in this very quick survey: removed
