more entry and images

--- a/netbeans.apache.org/src/content/blogs/entry/towards-fair-trade-for-foss.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/towards-fair-trade-for-foss.adoc
@@ -28,7 +28,7 @@
 :toc: left
 :toc-title:
 :syntax: true
-
+:imagesdir: https://netbeans.apache.org
 
 As part of being involved in Apache, I got the opportunity yesterday to go to Brussels 
 to attend the European Commission's link:https://ec.europa.eu/info/news/ec-open-source-workshops-computing-and-sustainability-2-december-2022-2022-oct-21_en[EC Open Source Workshops - Computing and Sustainability].
@@ -43,7 +43,7 @@ aside from the academic side of it, I wanted to finally understand how the EU ac
 with all its institutions, etc, and, though I can't say I really have a full grasp on it all yet 
 (I doubt anyone really does), it was quite moving to be at one of the key pillars of that institution yesterday.
 
-image::towards-fair-trade-for-foss-pic1.png[]
+image::blogs/entry/towards-fair-trade-for-foss-pic1.png[]
 
 To describe all the discussions that took place would be impossible, 
 since I could only physically attend a few of them because many happened in parallel, 
@@ -52,13 +52,13 @@ such as Simon Phipps, Dirk van Gulik, Roman Shaposhnik, and Jarek Potiuk,
 as well as many other new people, there were just too many, from all different organizations, 
 NGOs, local administrations, governments, etc, from within the EU and beyond.
 
-image::towards-fair-trade-for-foss-pic2.png[]
+image::blogs/entry/towards-fair-trade-for-foss-pic2.png[]
 
 Each workshop consisted of a panel that kicked off discussions, 
 with participants in the room being able to participate, ending with voting 
 on the most important topics to carry forward and recommend to the European Commission.
 
-image::towards-fair-trade-for-foss-pic3.png[]
+image::blogs/entry/towards-fair-trade-for-foss-pic3.png[]
 
 == Themes
 
