--- a/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-11-2.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-11-2.adoc
@@ -17,9 +17,9 @@
 //     under the License.
 //
 
-= NetBeans Pub Hangout in Prague
+= [ANNOUNCE] Apache NetBeans 11.2 Released
 :author: Geertjan Wielenga
-:revdate: 2022-10-24
+:revdate: 2019-11-01
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
@@ -28,14 +28,21 @@
 :toc: left
 :toc-title:
 :syntax: true
-:imagesdir: https://netbeans.apache.org
 
-A group of Java engineers gathered in a pub in Prague last night to celebrate many years 
-of their engagement in NetBeans, all having worked in Sun Microsystems or Oracle or both, 
-continuing into the Apache world where NetBeans is now found.
+The Apache NetBeans team is pleased to announce the release of Apache NetBeans 11.2. 
+Apache NetBeans is a full IDE for Java SE, Java EE, PHP and JavaScript development with some Groovy language support.
 
-This will not be the last of such gatherings, anyone involved in NetBeans over
-the years is more than welcome to attend or set up similar get togethers, 
-ideally in a pub, which is also where NetBeans started.
+Apache NetBeans 11.2 is the second Apache NetBeans release outside the Apache Incubator and the second release of the new quarterly release cycle. 
+The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. 
+The 11.2 release has not been as heavily tested as the LTS release. 
+Use 11.2 to access the latest features and to provide feedback for the next LTS release, scheduled for April 2020.
 
-image::blogs/entry/netbeans-pub-hangout-in-prague-pic1.png[]
+New & noteworthy features of the 11.2 release:
+
+xref:../../download/nb112/index.adoc[Apache NetBeans 11.2 Features page]
+
+Downloads:
+
+xref:../../download/nb112/nb112.adoc[Apache NetBeans 11.2 Download page]
+
+Feel free to share the good news!
