--- a/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-incubating-11.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-incubating-11.adoc
@@ -17,9 +17,9 @@
 //     under the License.
 //
 
-= NetBeans Pub Hangout in Prague
+= [ANNOUNCE] Apache NetBeans (incubating) 11.0 Released
 :author: Geertjan Wielenga
-:revdate: 2022-10-24
+:revdate: 2019-04-05
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
@@ -28,14 +28,19 @@
 :toc: left
 :toc-title:
 :syntax: true
-:imagesdir: https://netbeans.apache.org
 
-A group of Java engineers gathered in a pub in Prague last night to celebrate many years 
-of their engagement in NetBeans, all having worked in Sun Microsystems or Oracle or both, 
-continuing into the Apache world where NetBeans is now found.
 
-This will not be the last of such gatherings, anyone involved in NetBeans over
-the years is more than welcome to attend or set up similar get togethers, 
-ideally in a pub, which is also where NetBeans started.
+The Apache NetBeans team is proud to announce the release of Apache NetBeans (incubating) 11.0.
 
-image::blogs/entry/netbeans-pub-hangout-in-prague-pic1.png[]
+*Apache NetBeans (incubating) 11.0 constitutes all clusters in the Apache NetBeans Git repo, which together provide the NetBeans Platform (i.e., the underlying application framework), as well as all the modules that provide the Java SE, Java EE, PHP, JavaScript and Groovy features of Apache NetBeans.*
+
+In short, Apache NetBeans (incubating) 11.0 is a full IDE for Java SE, Java EE, PHP and JavaScript development with some Groovy language support.
+
+New & noteworthy features of the 11.0 release:
+
+xref:../../download/nb110/index.adoc[Apache NetBeans (incubating) 11.0 Features page]
+
+Downloads:
+
+xref:../../download/nb110/nb110.adoc[Apache NetBeans (incubating) 11.0 Download page]
+
