--- a/netbeans.apache.org/src/content/blogs/entry/apache-netbeans-openjfx-and-adoptopenjdk.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/apache-netbeans-openjfx-and-adoptopenjdk.adoc
@@ -17,25 +17,25 @@
 //     under the License.
 //
 
-= NetBeans Pub Hangout in Prague
-:author: Geertjan Wielenga
-:revdate: 2022-10-24
+= Apache NetBeans, OpenJFX, and AdoptOpenJDK
+:author: Geertjan Wielenga 
+:revdate: 2019-06-10
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
-:keywords: Apache NetBeans 18 release
-:description: Apache NetBeans 18 release
+:keywords: NetBeans at Oracle Code One 2019
+:description: NetBeans at Oracle Code One 2019
 :toc: left
 :toc-title:
 :syntax: true
-:imagesdir: https://netbeans.apache.org
 
-A group of Java engineers gathered in a pub in Prague last night to celebrate many years 
-of their engagement in NetBeans, all having worked in Sun Microsystems or Oracle or both, 
-continuing into the Apache world where NetBeans is now found.
 
-This will not be the last of such gatherings, anyone involved in NetBeans over
-the years is more than welcome to attend or set up similar get togethers, 
-ideally in a pub, which is also where NetBeans started.
+Check out a great series of articles on a killer combination, by Chris Lufg--Apache NetBeans, OpenJFX, and AdoptOpenJDK.
 
-image::blogs/entry/netbeans-pub-hangout-in-prague-pic1.png[]
+In part one you see how to get a modular JavaFX application built and running from NetBeans. In part two, you look at generating, from Maven, a runtime to execute the application. In part 3, you learn about the distribution of the new application.
+
+Here are the three parts:
+
+* link:https://dzone.com/articles/adoptopenjdk-11-openjfx-netbeans[AdoptOpenJDK 11 + OpenJFX + NetBeans: Part 1]
+* link:https://dzone.com/articles/adoptopenjdk-11-openjfx-netbeans-part-2[AdoptOpenJDK 11 + OpenJFX + NetBeans: Part 2]
+* link:https://dzone.com/articles/adoptopenjdk-11-openjfx-netbeans-part-3[AdoptOpenJDK 11 + OpenJFX + NetBeans: Part 3]
