--- a/netbeans.apache.org/src/content/blogs/entry/released-netbeans-11-2-update.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/released-netbeans-11-2-update.adoc
@@ -17,9 +17,9 @@
 //     under the License.
 //
 
-= NetBeans Pub Hangout in Prague
+= Released: NetBeans 11.2 Update 1 
 :author: Geertjan Wielenga
-:revdate: 2022-10-24
+:revdate: 2019-12-03
 :jbake-type: post
 :jbake-tags: blogentry
 :jbake-status: published
@@ -28,14 +28,14 @@
 :toc: left
 :toc-title:
 :syntax: true
-:imagesdir: https://netbeans.apache.org
 
-A group of Java engineers gathered in a pub in Prague last night to celebrate many years 
-of their engagement in NetBeans, all having worked in Sun Microsystems or Oracle or both, 
-continuing into the Apache world where NetBeans is now found.
 
-This will not be the last of such gatherings, anyone involved in NetBeans over
-the years is more than welcome to attend or set up similar get togethers, 
-ideally in a pub, which is also where NetBeans started.
+This release is identical to 11.2 except for backported fixes for:
 
-image::blogs/entry/netbeans-pub-hangout-in-prague-pic1.png[]
+link:https://issues.apache.org/jira/browse/NETBEANS-3257[NETBEANS-3257] Fixed issue on refactoring rename of java method (and potentially other nb-javac issues)
+
+link:https://issues.apache.org/jira/browse/NETBEANS-3335[NETBEANS-3335] Enhance robustness of HTML Lexer - enter key doesn't work in certain files
+
+link:https://issues.apache.org/jira/browse/NETBEANS-3290[NETBEANS-3290] Fix common.xml causing layer build problems in RCP applications
+
+Use the Plugin Manager under the Tools menu to update 11.2 to 11.2 Update 1.
