add blogs entry + related document

--- a/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-incubating-9.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/announce-apache-netbeans-incubating-9.adoc
@@ -40,7 +40,7 @@ See the below for the donation status of features that have not been donated to 
 
 link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+Transition[https://cwiki.apache.org/confluence/display/NETBEANS/Apache+Transition]
 
-Note: Apache NetBeans (incubating) 9.0 Beta is primarily focused on IP clearance. Its functionality has not been tested — the NetCAT (NetBeans Community Acceptance Testing) process will begin now that Apache NetBeans (incubating) 9.0 Beta has been released. Watch this space for upcoming announcements about NetCAT. When NetCAT completes, we will vote on the final release of Apache NetBeans (incubating) 9.0.
+Note: Apache NetBeans (incubating) 9.0 Beta is primarily focused on IP clearance. Its functionality has not been tested -- the NetCAT (NetBeans Community Acceptance Testing) process will begin now that Apache NetBeans (incubating) 9.0 Beta has been released. Watch this space for upcoming announcements about NetCAT. When NetCAT completes, we will vote on the final release of Apache NetBeans (incubating) 9.0.
 
 Details on Apache NetBeans (incubating) 9.0 Beta:
 
