--- a/netbeans.apache.org/src/content/blogs/entry/netbeans-for-javaee-project-productivity.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/netbeans-for-javaee-project-productivity.adoc
@@ -31,11 +31,15 @@
 :imagesdir: https://netbeans.apache.org
 
 
-Last Saturday (June 30, 2018) I was invited to COFAN (Conférence au Faso sur le Numérique) to present tips for building enterprise Java applications. COFAN is a conference divided into multiple sessions on a variety of technologies. It was started last year and the second tour has been taking place since May and it is sponsored by the government of Burkina Faso.
+Last Saturday (June 30, 2018) I was invited to COFAN (ConfÃ©rence au Faso sur le NumÃ©rique) to present tips for building enterprise Java applications. 
+COFAN is a conference divided into multiple sessions on a variety of technologies. 
+It was started last year and the second tour has been taking place since May and it is sponsored by the government of Burkina Faso.
 
-I was given the opportunity to talk about enterprise Java in general and to show how NetBeans can be a great tool to develop strong and professional Java enterprise applications.
+I was given the opportunity to talk about enterprise Java in general and to show how NetBeans can be a great tool 
+to develop strong and professional Java enterprise applications.
 
-A room filled with an attentive audience was very enthusiastic. They were also satisfied by the answers to their questions, while some decided to continue using NetBeans, with others promising to start working with it for the first time!
+A room filled with an attentive audience was very enthusiastic. They were also satisfied by the answers to their questions,
+while some decided to continue using NetBeans, with others promising to start working with it for the first time!
 
 Pictures of the event are below:
 
