--- a/netbeans.apache.org/src/content/blogs/entry/php-conditional-breakpoints-and-new.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/php-conditional-breakpoints-and-new.adoc
@@ -29,6 +29,7 @@
 :toc-title:
 :syntax: true
 :experimental:
+:imagesdir: https://netbeans.apache.org
 
 
 Hi all. Today, we will show you some new features which will be available in the *next NetBeans version*, maybe
