--- a/netbeans.apache.org/src/content/blogs/entry/apache-netbeans-at-oracle-code.adoc
+++ b/netbeans.apache.org/src/content/blogs/entry/apache-netbeans-at-oracle-code.adoc
@@ -85,7 +85,7 @@ Speakers: Kenneth Fogel, Instructor, Concordia University
 +
 Title: Bridging Swing and JavaFX on an Enterprise Scale [DEV6080]
 +
-Speakers: Sven Reimers, José Pereda
+Speakers: Sven Reimers, JosÃ© Pereda
 
 * *Wednesday, Oct 24, 9:00 a.m. - 9:45 a.m. | Moscone West - Room 2010*
 +
@@ -97,7 +97,7 @@ Speakers: Martin Skarsaune
 +
 Title: Lambda Programming Laboratory - BYOL [HOL6006]
 +
-Speakers: Jeff Dinkins, Stuart Marks, Maurice Naftalin, José Paumard
+Speakers: Jeff Dinkins, Stuart Marks, Maurice Naftalin, JosÃ© Paumard
 
 * *Thursday, Oct 25, 09:00 AM - 11:00 AM | Moscone West - Overlook 2A (HOL)*
 +
