--- a/netbeans.apache.org/src/content/download/nb19/index.adoc
+++ b/netbeans.apache.org/src/content/download/nb19/index.adoc
@@ -23,22 +23,24 @@ See https://www.apache.org/dev/release-download-pages.html
 for important requirements for download pages for Apache projects.
 
 ////
-= Downloading Apache NetBeans 18
+= Downloading Apache NetBeans 19
 :jbake-type: page_noaside
 :jbake-tags: download
 :jbake-status: published
-:keywords: Apache NetBeans 18 Download
-:description: Apache NetBeans 18 Download
+:keywords: Apache NetBeans 19 Download
+:description: Apache NetBeans 19 Download
 :toc: left
 :toc-title:
 :icons: font
 
 // check version above
-:netbeans-version: 18
+:netbeans-version: 19
 
 // base URLs - when archiving, delete the next 2 lines and uncomment the following 2
-:url-download: https://archive.apache.org/dist/netbeans/
-:url-download-keychecksum: https://archive.apache.org/dist/netbeans/
+:url-download: https://www.apache.org/dyn/closer.cgi/netbeans/
+:url-download-keychecksum: https://downloads.apache.org/netbeans/
+// :url-download: https://archive.apache.org/dist/netbeans/
+// :url-download-keychecksum: https://archive.apache.org/dist/netbeans/
 
 //// 
 url-download depends of release status archived or not
@@ -50,7 +52,7 @@ https://archive.apache.org/dist/netbeans/  (//archived)
 https://downloads.apache.org/netbeans/ (//current)
 ////
 
-Apache NetBeans {netbeans-version} was released on May 30, 2023.
+Apache NetBeans {netbeans-version} was released on September 1, 2023.
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
 NOTE: It's mandatory to link against https://www.apache.org for the sums & keys. https is recommended.
@@ -126,8 +128,8 @@ in a directory of your liking.
 As in any other Apache Project, the Apache NetBeans Community approved this release
 through the following voting processes in our xref:../../community/mailing-lists.adoc[mailing lists]:
 
-- link:https://lists.apache.org/thread/7wkto2fjg3yxrvk100dgzlvvpm9br9zx[PMC vote]
-- link:https://lists.apache.org/thread/cj5mpdl2gpx86p1q11m3l9vvryxxgblz[PMC vote result]
+- link:https://lists.apache.org/thread/3656879p6bfb1bb2vd0gh66jl711chhr[PMC vote]
+- link:https://lists.apache.org/thread/dfjrbnq7opbb60m3vcvorkcm9hokkqsn[PMC vote result]
 
 == Earlier Releases
 
