add windows jdk issue item

--- a/netbeans.apache.org/src/content/download/nb19/index.adoc
+++ b/netbeans.apache.org/src/content/download/nb19/index.adoc
@@ -112,6 +112,10 @@ TIP: The Runtime JDK NetBeans uses does not influence the JDK range projects can
 
 == Known Issues
 
+* On windows you may encounter the following JDK issue: "Comparison method violates its general contract"
++
+link:https://github.com/apache/netbeans/discussions/6361[Resolution of the issue]
+
 * link:https://github.com/apache/netbeans/issues[All Issues on GitHub]
 
 * link:https://netbeans.apache.org/participate/report-issue.html[How to Report an Issue]
