--- a/modules/ROOT/pages/download/nb16/index.adoc
+++ b/modules/ROOT/pages/download/nb16/index.adoc
@@ -43,7 +43,7 @@ for important requirements for download pages for Apache projects.
 //// 
 url-download depends of release status archived or not
 https://archive.apache.org/dist/netbeans/  (//archived)
-https://www.apache.org/dyn/closer.cgi/netbeans/ (//current)
+https://www.apache.org/dyn/closer.lua/netbeans/ (//current)
 
 url-download-keychecksum depends of release status archived or not
 https://archive.apache.org/dist/netbeans/  (//archived)
@@ -80,7 +80,7 @@ link:{url-download-keychecksum}netbeans-installers/{netbeans-version}/apache-net
 * link:{url-download}netbeans/{netbeans-version}/netbeans-{netbeans-version}-source.zip[netbeans-{netbeans-version}-source.zip] (link:{url-download-keychecksum}netbeans/{netbeans-version}/netbeans-{netbeans-version}-source.zip.sha512[SHA-512],
 link:{url-download-keychecksum}netbeans/{netbeans-version}/netbeans-{netbeans-version}-source.zip.asc[PGP ASC])
 
-Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity]
+Officially, it is important that you link:https://www.apache.org/dyn/closer.lua#verify[verify the integrity]
 of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).
 The PGP keys used to sign this release are available link:https://downloads.apache.org/netbeans/KEYS[here].
 
