--- a/modules/ROOT/pages/download/nb100/nb100.adoc
+++ b/modules/ROOT/pages/download/nb100/nb100.adoc
@@ -56,7 +56,7 @@ link:https://archive.apache.org/dist/incubator/netbeans/incubating-netbeans/incu
 ////
 NOTE: Using https below is highly recommended.
 ////
-Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).  The PGP keys used to sign this release are available link:https://dist.apache.org/repos/dist/release/incubator/netbeans/KEYS[here].
+Officially, it is important that you link:https://www.apache.org/dyn/closer.lua#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).  The PGP keys used to sign this release are available link:https://dist.apache.org/repos/dist/release/incubator/netbeans/KEYS[here].
 
 Also see the following YouTube clip:
 
