--- a/modules/ROOT/pages/download/nb110/nb110.adoc
+++ b/modules/ROOT/pages/download/nb110/nb110.adoc
@@ -59,7 +59,7 @@ link:https://archive.apache.org/dist/incubator/netbeans/incubating-netbeans/incu
 ////
 NOTE: Using https below is highly recommended.
 ////
-Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).  The PGP keys used to sign this release are available link:https://downloads.apache.org/incubator/netbeans/KEYS[here].
+Officially, it is important that you link:https://www.apache.org/dyn/closer.lua#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).  The PGP keys used to sign this release are available link:https://downloads.apache.org/incubator/netbeans/KEYS[here].
 
 TIP: Installers have been introduced for the first time in the next release, in Apache NetBeans 11.1. Go xref:download/nb111/nb111.adoc[here] for details.
 
