--- a/modules/ROOT/pages/download/nb112/nb112.adoc
+++ b/modules/ROOT/pages/download/nb112/nb112.adoc
@@ -69,7 +69,7 @@ link:https://archive.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2
 ////
 NOTE: Using https below is highly recommended.
 ////
-Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity]
+Officially, it is important that you link:https://www.apache.org/dyn/closer.lua#verify[verify the integrity]
 of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).
 The PGP signatures should be matched against the link:https://downloads.apache.org/netbeans/KEYS[KEYS] file which contains the PGP keys used to sign this release.
 
@@ -88,7 +88,7 @@ To build Apache NetBeans 11.2 from source you need:
 
 Once you have everything installed then:
 
-1. Unzip link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.2/netbeans-11.2-source.zip[netbeans-11.2-source.zip]
+1. Unzip link:https://www.apache.org/dyn/closer.lua/netbeans/netbeans/11.2/netbeans-11.2-source.zip[netbeans-11.2-source.zip]
 in a directory of your liking.
 
 [start=2]
