--- a/modules/ROOT/pages/download/nb13/nb13.adoc
+++ b/modules/ROOT/pages/download/nb13/nb13.adoc
@@ -43,25 +43,25 @@ NOTE: It's NOT recommended to link to github.
 Apache NetBeans 13 is available for download from your closest Apache mirror.
 
 - Binaries: 
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/13/netbeans-13-bin.zip[netbeans-13-bin.zip] (link:https://downloads.apache.org/netbeans/netbeans/13/netbeans-13-bin.zip.sha512[SHA-512],
+link:https://www.apache.org/dyn/closer.lua/netbeans/netbeans/13/netbeans-13-bin.zip[netbeans-13-bin.zip] (link:https://downloads.apache.org/netbeans/netbeans/13/netbeans-13-bin.zip.sha512[SHA-512],
 link:https://downloads.apache.org/netbeans/netbeans/13/netbeans-13-bin.zip.asc[PGP ASC])
 
 - Installers:
  
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-windows-x64.exe[Apache-NetBeans-13-bin-windows-x64.exe] (link:https://downloads.apache.org/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-windows-x64.exe.sha512[SHA-512],
+* link:https://www.apache.org/dyn/closer.lua/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-windows-x64.exe[Apache-NetBeans-13-bin-windows-x64.exe] (link:https://downloads.apache.org/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-windows-x64.exe.sha512[SHA-512],
 link:https://downloads.apache.org/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-windows-x64.exe.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-linux-x64.sh[Apache-NetBeans-13-bin-linux-x64.sh] (link:https://downloads.apache.org/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-linux-x64.sh.sha512[SHA-512],
+* link:https://www.apache.org/dyn/closer.lua/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-linux-x64.sh[Apache-NetBeans-13-bin-linux-x64.sh] (link:https://downloads.apache.org/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-linux-x64.sh.sha512[SHA-512],
 link:https://downloads.apache.org/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-linux-x64.sh.asc[PGP ASC])
 * link:https://archive.apache.org/dist/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-macosx.dmg[Apache-NetBeans-13-bin-macosx.dmg] (link:https://archive.apache.org/dist/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-macosx.dmg.sha512[SHA-512],
 link:https://archive.apache.org/dist/netbeans/netbeans-installers/13/Apache-NetBeans-13-bin-macosx.dmg.asc[PGP ASC])
 
-- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/13/netbeans-13-source.zip[netbeans-13-source.zip] (link:https://downloads.apache.org/netbeans/netbeans/13/netbeans-13-source.zip.sha512[SHA-512],
+- Source: link:https://www.apache.org/dyn/closer.lua/netbeans/netbeans/13/netbeans-13-source.zip[netbeans-13-source.zip] (link:https://downloads.apache.org/netbeans/netbeans/13/netbeans-13-source.zip.sha512[SHA-512],
 link:https://downloads.apache.org/netbeans/netbeans/13/netbeans-13-source.zip.asc[PGP ASC])
 
 ////
 NOTE: Using https below is highly recommended.
 ////
-Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity]
+Officially, it is important that you link:https://www.apache.org/dyn/closer.lua#verify[verify the integrity]
 of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).
 The PGP keys used to sign this release are available link:https://downloads.apache.org/netbeans/KEYS[here].
 
@@ -94,7 +94,7 @@ To build Apache NetBeans 13 from source you need:
 
 Once you have everything installed then:
 
-1. Unzip link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/13/netbeans-13-source.zip[netbeans-13-source.zip]
+1. Unzip link:https://www.apache.org/dyn/closer.lua/netbeans/netbeans/13/netbeans-13-source.zip[netbeans-13-source.zip]
 in a directory of your liking.
 
 [start=2]
