--- a/modules/ROOT/pages/download/nb90/nb90.adoc
+++ b/modules/ROOT/pages/download/nb90/nb90.adoc
@@ -60,7 +60,7 @@ link:https://www.youtube.com/watch?v=I8gdC7BBtbs[Get Started with NetBeans from 
 ////
 NOTE: Using https below is highly recommended.
 ////
-Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha1 files).  The PGP keys used to sign this release are available link:https://dist.apache.org/repos/dist/release/incubator/netbeans/KEYS[here].
+Officially, it is important that you link:https://www.apache.org/dyn/closer.lua#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha1 files).  The PGP keys used to sign this release are available link:https://dist.apache.org/repos/dist/release/incubator/netbeans/KEYS[here].
 
 == Building from source
 
